--- a/server/package.json
+++ b/server/package.json
@@ -3,12 +3,19 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon app.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
-    "http-errors": "~1.6.3",
+    "joi": "^17.4.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.15",
     "nodemon": "^2.0.7"
+  },
+  "devDependencies": {
+    "eslint": "^7.20.0"
   }
 }
