--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,11 @@
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.7"
   },
   "devDependencies": {
-    "eslint": "^7.20.0"
+    "eslint": "^7.20.0",
+    "prettier": "2.2.1"
   }
 }
