--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
     "multer": "^1.4.2",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "socket.io": "^4.0.1",
+    "websocket": "^1.0.34"
   },
   "devDependencies": {
     "eslint": "^7.20.0",
