--- a/server/package.json
+++ b/server/package.json
@@ -16,10 +16,12 @@
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
     "socket.io": "^4.0.1",
+    "swagger-jsdoc": "^6.0.1",
     "websocket": "^1.0.34"
   },
   "devDependencies": {
     "eslint": "^7.20.0",
     "prettier": "2.2.1"
-  }
+  },
+  "type": "module"
 }
