--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
   },
   "devDependencies": {
     "eslint": "^7.20.0",
-    "prettier": "2.2.1"
+    "prettier": "2.2.1",
+    "swagger-ui-express": "^4.1.6"
   },
   "type": "module"
 }
