--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "debug": "~2.6.9",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "express": "~4.16.1",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
@@ -17,6 +17,7 @@
     "nodemon": "^2.0.7",
     "socket.io": "^4.0.1",
     "swagger-jsdoc": "^6.0.1",
+    "swagger-ui-express": "^4.1.6",
     "websocket": "^1.0.34"
   },
   "devDependencies": {
