--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
   "name": "kladionica",
+  "proxy": "http://127.0.0.1:4000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,8 +9,10 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.0",
+    "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-transition-group": "^4.4.1",
     "socket.io-client": "^4.1.2",
